<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/action_inicio"
            android:title="@string/inicio"
            android:icon="@drawable/ic_home"/>

        <item android:id="@+id/action_facebook"
            android:title="@string/facebook"
            android:icon="@drawable/ic_facebook"/>

        <item android:id="@+id/action_instagram"
            android:title="@string/instagram"
            android:icon="@drawable/ic_instagram"/>

        <item android:id="@+id/action_google"
            android:title="@string/google_plus"
            android:icon="@drawable/ic_google_plus"/>

        <item android:id="@+id/action_twitter"
            android:title="@string/twitter"
            android:icon="@drawable/ic_twitter"/>

    </group>

</menu>